k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-to-gif
spec:
  selector:
    app: video-to-gif
  ports:
  - port: 80
    targetPort: 8083
  type: ClusterIP
